--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -25,7 +23,15 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
+/build/
 
 ### VS Code ###
 .vscode/
+logs/
+
+
+### Nodejs ###
+node_modules/
+.DS_Store
+
+pom.xml.versionsBackup
