update log config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8081
 
+# log config
+logging.level.root=ERROR
+logging.level.com.weison.sbr=DEBUG
+
 # data-jpa config
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
