--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8081
 # log config
 logging.level.root=ERROR
 logging.level.com.weison.sbr=DEBUG
+logging.level.org.springframework=INFO
 
 # data-jpa config
 spring.jpa.show-sql=true
